method not output to template

--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,31 @@
-body {
-    padding-top: 50px;
+#image{
+	position: absolute;
+	left: 10px;
+	border: 1px solid #DCDCDC;
+	padding: 2px;
+	border-radius: 5px;
+}
+
+#header{
+	height: 25px;
+	width: 400px;
+	position: absolute;
+	left: 190px;
+	top: 10px;
+	background-color: #DCDCDC;
+	border-radius: 5px 5px 0px 0px;
+	border: 1px solid #DCDCDC;
+	padding-left: 10px;
+	padding-top: 10px;
+}
+#inner{
+	height: 235px;
+	width: 390px;
+	position: absolute;
+	left: 190px;
+	top: 46px;
+	border: 1px solid #DCDCDC;
+	border-radius: 0px 0px 5px 5px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
